syntax = "proto3";

option java_package ="io.grpc.examples";

package AskAndAnswerQuestion;

service Greeter {
rpc AskQuestion(AskQuestionRequest) returns (AskQuestionReply){}
rpc BrowseQuestion(BrowseQuestionRequest) returns (BrowseQuestionReply) {}
rpc AnswerQuestion(AnswerQuestionRequest) returns (AnswerQuestionReply) {}
rpc DetailedList(DetailedListRequest) returns (DetailedListReply) {}
}

message AskQuestionRequest {
string Num=1;
string Question=2;
}

message AskQuestionReply {
string Num=1;
string Question=2;
string Result=3;
}

message BrowseQuestionRequest {
}

message BrowseQuestionReply {
repeated string Question=1;
string Result=2;
}

message AnswerQuestionRequest {
string Question=1;
string Answer=2;
string Answerer=3;
}

message AnswerQuestionReply {
string Question=1;
string Answer=2;
string Answerer=3;
string Result=4;
}

message DetailedListRequest {
string Question=1;
}


message DetailedListReply {
repeated  DetailedList detailedlist=1;
string Result=2;
}

message  DetailedList{
string Question=1;
string Questioner=2;
string Answer=3;
string Answerer=4;
}