syntax = "proto3";

option java_package ="io.grpc.examples";

package PullQuestion;

service Greeter {
rpc AllMyQuestion(AllMyQuestionRequest) returns (AllMyQuestionReply) {}
rpc AllMyAnswer(AllMyAnswerRequest) returns (AllMyAnswerReply) {}
rpc HighestRanking(HighestRankingRequest) returns (HighestRankingReply) {}
rpc RedisSort(RedisSortRequest) returns (RedisSortReply) {}
}


message AllMyQuestionRequest {
string Questioner=1;
}


message AllMyQuestionReply{
 repeated Questionlist  Question=1;
 string Result=2;
}

message Questionlist{
string Id=1;
string Question=2;
string Questioner=3;
string Answer_count=4;
}


message AllMyAnswerRequest {
string Answerer=1;
}


message AllMyAnswerReply{
 repeated Answerlist  Answer=1;
 string Result=2;
}

message Answerlist{
string Num=1;
string Answer=2;
string Answerer=3;
}

message HighestRankingRequest{
}


message HighestRankingReply{
 repeated  Questionlist  Question=1;
 string Result=2;
}


message RedisSortRequest {
}

message RedisSortReply{
 repeated  Questionlist  Question=1;
 string Result=2;
}
